--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,18 @@
 
   <title>flutter_chat_app</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- Google Fonts - Noto Sans JP for Japanese support -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
+  
+  <style>
+    /* Apply Japanese font as fallback */
+    body {
+      font-family: 'Noto Sans JP', sans-serif;
+    }
+  </style>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
